--- a/index.html
+++ b/index.html
@@ -4,7 +4,60 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ToDo List </title>
-<link rel="stylesheet" href="task4.css">
+<style>
+  body {
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  background-image:linear-gradient(to right,red,pink);
+}
+
+.container {
+  max-width: 400px;
+  margin: 50px auto;
+} 
+h1{
+ 
+  
+}
+input{
+  width: 100%;
+  height: 18px;
+  padding: 8px;
+  margin-right: 10px;
+}
+
+#addtask{
+  padding: 9px 15px;
+  /*position:absolute; */
+  display: flex;
+  align-items: end;
+  justify-content:;
+  right:450px;
+  top:109px;
+  
+  background-color: #4CAF50;
+  color: white;
+  border:solid black 1px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#addtask:hover {
+  background-color:darkgreen;
+}
+li {
+  display: flex;
+  justify-content:space-evenly;
+  align-items:center;
+  padding: 10px; 
+  background-color: #f2f2f2;
+  border-radius: 5px;
+  margin-bottom: 5px
+}
+
+li:hover {
+  background-color:silver;
+}
+</style>
 </head>
 <body>
 
